# ChangeLog for app-emulation/crossover-bin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/crossover-bin/ChangeLog,v 1.4 2013/05/02 19:30:49 ryao Exp $

*crossover-bin-12.2.0 (02 May 2013)

  02 May 2013; Richard Yao <ryao@gentoo.org> +crossover-bin-12.2.0.ebuild:
  Version bump to 12.2.0

  22 Apr 2013; Michał Górny <mgorny@gentoo.org> crossover-bin-12.1.2.ebuild:
  Support multilib libraries alternatively to emul-linux-x86-xlibs.

  27 Mar 2013; Richard Yao <ryao@gentoo.org> crossover-bin-12.1.2.ebuild:
  Fix mistake caused by last minute correction to make repoman happy.

*crossover-bin-12.1.2 (27 Mar 2013)

  27 Mar 2013; Richard Yao <ryao@gentoo.org> +crossover-bin-12.1.2.ebuild,
  +metadata.xml:
  New package app-emulation/crossover-bin. Ebuild written by me with
  app-emulation/crossover-office-pro-bin as template; influenced by feedback
  from hasufell.