@@ -4,23 +4,23 @@ Hash: SHA256
 DIST install-crossover-12.1.2.bin 48533685 SHA256 4fe093d1535dd2e786d714483d2a033c8161d9863982df3e424630695f188da0 SHA512 8cb97bcdfb9eb0cce37ae083e0e112568659bd43cd845209fa18b80b246c69501ec7e0233526c930e001b2bf92705f31633d8c55602745ed76d071c069d7f2bc WHIRLPOOL b8736eae92fbf0f3f214ffbfafd16b0aaaa15391488a3595ec5299995c58d283b0e53bf744784e2313c41d0a3c8b72eff631e94bdea3d7f5969d04cea83c53b9
 DIST install-crossover-12.2.0.bin 48619226 SHA256 ca1f7535c9838c5299fe6c83ea698b0c62aa1d201ab6ad63a46522a4b50eb8ce SHA512 1a8f371eaef48212bfa72f0b8569a30f82c2b8663f7170e6ceba525f3360e6249236d3085e60f70db1dc6560fcdf0a884f46c763369597840a59a98e44a0e343 WHIRLPOOL c3d5e77f84c444a665a7be34596ef31cb6c059ba2e70132c066c77560c49de133e7e925284019c88a3ecb526fab4264b876e87b1c4bdce580b1494433c2b3fcb
 EBUILD crossover-bin-12.1.2.ebuild 4050 SHA256 a7683c6b0de7b42bd066664d96dd503cd28c4ddd94725a7066c2c643ba6575cd SHA512 011cc7e4643792ac3b794360177343a418376fc9d293ed4abb87c3e4ec21ec9215279625e00af6edc8245949279534bd0bca07e65ba0166a73852c666f3f77b6 WHIRLPOOL e3d65b5c04f339dd5b0189e7a11050af3e3ce227dc39be69c8824b423e683650768c452e28eccd1239f278c534f9ac48939a6aa983c4c499dfe71988f8297a9c
-EBUILD crossover-bin-12.2.0.ebuild 3669 SHA256 ecae1307e681ac7d24285a8df11564913cbbf8a4935b128b32e44f318bf00b06 SHA512 842789f48ef529266ff70aa7adb3bf4922dcbbde8ed07c0795051fc95ff83a22525429d37dfc69ab601d9ffce8779712dc51545884ec59f3831fdc95382b6496 WHIRLPOOL 51991fe422b90a27d3d2f1cf809149cdec74263661940e48b6b1e1c3075b42425ce6734e2e48f785d058dbefab0f797ba21d57f2e8d37cccd4ee301bf30d83a5
-MISC ChangeLog 948 SHA256 14bcc7315f4aaad55184c8f644ae104b7569295d69dfb89be6c6fa797471862d SHA512 4898be615307f2dffe239eb68de9f5044829e060813916c76e579a8688a4c64dbc7c7bf98e1cf13d50cc726674add9d2d723c28003c1e21806a033955f58b051 WHIRLPOOL 23b1f2551789fcb705382c1d08b3f0e0bc039934eeeedbfe43b4fddb678f982e18a301337c7005b83a7e057c096a7dad97d6efe625711f109429de27ff192126
+EBUILD crossover-bin-12.2.0.ebuild 4048 SHA256 3f4a27dcf42140190513b2c3ca9144586f281525f01c29b4fd52916db154f774 SHA512 43a48159ab8fa07c9454c3894b46c728d6a0a4a12f96a460fb0797555824cd55e77d88fff74771e1e5a9b6feccc225a2b1432ccba85443a61439b94f8f0b3bca WHIRLPOOL e0e18a16b4d46ab74ced0f7f421ff9ff151dae0654ea39212d9c72e68e1968b7f919876598911c57b0724c93262baaa363a01ff73f55936453f107987659396a
+MISC ChangeLog 1062 SHA256 02c9144de2ea24242f77c84e17fd3969e215d23315406555e8e2281f5fec0726 SHA512 e044a3a9ea9c0f75b07cd147a6eeea0880a8fc734310165ac098dd019544a721d2b65fc404c9cb79e0a36198b52c77e9577abd759d041720a4becaaf69f83876 WHIRLPOOL e21b68c8917f7cf56d00d38616c02f6c1ee8434ade2371e7fcbb658f0633996b70ce58fff990c1c47056c2cc4aef5af675ac7f3aeee3c5339a4ba602d84a4f56
 MISC metadata.xml 299 SHA256 1418809370ffded84700af60fec9e68cee312b0ce73f9668bc1763e00ff864cd SHA512 d95909115fce9cf70adb5cc7dd62c25ef58b6231a58959a61e08e848c2b994bdd51cf34d68484dce56d69b5f036b97e5f9f38ea34f123730372d37a099310c0d WHIRLPOOL 495e4b3f33c8fed584f84164ab271e44e1ff43ef5fab737c23de2156fd56bc4a51e6aa95cf8325cdb98c17e40d9fc1d56eb5d91aca2c2090be7119f017fdf693
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIbBAEBCAAGBQJRgr7GAAoJECDuEZm+6ExkkFMP9RbZHsZIrqaExNa9iYLBwutf
-mjzRD3Tio9KISQdXu1e8dgeoPpunw9fMq7g30raJ/U5i1creR3A7R4SvjSR14oiV
-3Q8RKb8LfB2Qrc89aqT8DjsL5Mouu+dGHMNfN1eZ1HlgHcOZv5mSMlhqqMmndydA
-s/3zPiNSnAku1bwfZQ3l/NHfHxhNxfic8UAE915b3oGVJEukzpTFfdUSnTzLNREV
-qrU3wAGyMWhconwcRtKE/uE2kyyDku3MwkgHag7E7nnAQ4/na5lLa9CsYBJ0h84y
-ZFy38x2GEag0srwM26g7Aola+CBz9WWmUTkdtK+ohxIvexOFm+xZH2xG+a7m0avy
-moEGy4nkz7Bz3Kna+xxlKWkwOoifImOjssT3tNEhdggNWWf7IMlDPFaIJfZk0rJR
-xN3XMF8h+IvwNapM2bKOs7/TsYC/3kNpdymRFHWw7yGxL4PSQBUOWaMwiCSTtPMY
-D8irtQppDfqEk947BnYW7lLMJXLuApk+hATCLvbggPh0m1cxQz94rlZvgvCLF6Yf
-xqq6X5c0yic53N0yTPwtuhocQkEnHXbTSq6VcyOCIotsFyqxWuJx44A7GuYmP8n5
-Ngn5RBL4mDAjWaZcopSCX7fxGIzRm6CSe4mYuhk5HMPcypdNnq0os1mnkhEBlrVA
-RvmVPcSFyvTo+U9J3uQ=
-=Rmne
+iQIcBAEBCAAGBQJRgr9MAAoJECDuEZm+6ExkHkkQAJLzRBN51fuWGgmG5w3X7dn3
+OiptWF8soNG3aDcoOb/N7LL8a8vkh7WBNyo2CVOk5eFdgMsNzyef4nm/Vm8jy37/
+3k10Tc5HQMQ75negeDCHkn5YyKahNdfVMzneDmh3RxVVorZhVT6ZJQGRppMxWbzL
+E6jwi3J03vKucE9YoItAB4Az48pU2zdl+0Wx9GHqXEYBWKunFv965+5ERqgeDIOI
+jI9aH2rs2/An4YAaAHOAuKG83w6ljyzOYPnOxFSF1yJGIWqGnR/4JmI7WnfUjQl+
+4RXlFZ+bnMn45Nu54U+77Uob3hq6BfqLmsBZtiQC1kq36Sv2SOQvAdXut9KkLsRy
+01ahxvroy3vAeRJAnCasGNqw/w5TOdB7sbnHssqEpW3h5BSGmDLWy3j2t9QiW2EX
+AZZmqATVSgmMXWDYLA/5Q03QpdU8Lheiy2EsQV2KlOlWeJh811KitNdwHWOn+ORj
+41VqE0xEyoiF0QZQ3JN58BxFN7I1FO1hcBiXAaIYlCwmCvI84ErIuMmg7CjpegDP
+mgK0ep2zzUo+zNq6Em9WnigflTN87ZFc5Uey0pPrlvr86th0wu36Dufj8rX2cc+C
+YAkwuob2YxrA4I5Hw4d1ycjRHkeyr/uXJbvOm5O4Z+56rJNr5wNWhMDeyStRGQug
+0vJFM+wECkjc5vYjgrTM
+=hFcU
 -----END PGP SIGNATURE-----
